fixed row alignment, emoved curation notice

--- a/assets/scss/hero.scss
+++ b/assets/scss/hero.scss
@@ -197,4 +197,7 @@
 
 .entity-page {
   margin-top: -1rem;
+  .col-12 > .container {
+    padding: 0;
+  }
 }
